# cmake_project

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  package.xml
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  coordinateTransform.cpp  exec_module1.cpp  exec_module1_module2.cpp  main  main.cpp  plotTrajectory.cpp
modules/: CMakeLists.txt
modules/module1/: CMakeLists.txt
modules/module1/include/module1/: ClassMat.hpp
modules/module1/src/: ClassMat.cpp
modules/module2/: CMakeLists.txt
modules/module2/include/module2/: ClassEigenMat.hpp
modules/module2/src/: ClassEigenMat.cpp
modules/module3/: CMakeLists.txt
modules/module3/include/module3/: ClassPangolinMat.hpp
modules/module3/src/: ClassPangolinMat.cpp
modules/plotTrajectory/: CMakeLists.txt
modules/plotTrajectory/include/plotTrajectory/: DrawTrajectory.hpp
modules/plotTrajectory/src/: DrawTrajectory.cpp
